--- a/bloque-1/what-the-hell-is-a-function/inherencia/index.html
+++ b/bloque-1/what-the-hell-is-a-function/inherencia/index.html
@@ -37,7 +37,7 @@
 		console.log( ilDiabolo );
 		console.log( ilDiabolo.comer() );
 		console.log('menu', ilDiabolo.getMenu() );
-		console.log('menu', ilDiabolo.getPizzas() );
+		console.log('pizzas', ilDiabolo.getPizzas() );
 
 		console.log('ilDiabolo instanceof Restaurant',ilDiabolo instanceof Restaurant);
 		console.log('ilDiabolo instanceof Pizzeria'  ,ilDiabolo instanceof Pizzeria);
