--- a/bloque-1/what-the-hell-is-a-function/objetos/index.html
+++ b/bloque-1/what-the-hell-is-a-function/objetos/index.html
@@ -2,6 +2,7 @@
 <head>
 	<script type="text/javascript">
 		var saludar = function(){
+			saludar.nombre = 'john doe';
 			console.log('saludar ' + saludar.nombre);
 		}
 
@@ -9,7 +10,7 @@
 			saludar.nombre = nombre;
 		}
 
-		saludar.agregarNombre('Siedrix');
+		//saludar.agregarNombre('Siedrix');
 		saludar();
 	</script>
 	<script type="text/javascript">
