Added dom class

--- a/bloque-1/events/ajax/index.html
+++ b/bloque-1/events/ajax/index.html
@@ -8,6 +8,8 @@
     dfd.done(function(data){
         console.log(data);
     });
+
+    console.log('doing something else');
 	
 	</script>
 </head>
