--- a/bloque-1/dom/ejemplo.html
+++ b/bloque-1/dom/ejemplo.html
@@ -18,8 +18,8 @@
 	};
 
 	var ToDoList = function (config) {
-		var self   = {};
-			config = config || {};
+		var self   = {}
+		config = config || {};
 
 		self.STORAGE_NAME = 'to-dos';
 
@@ -98,7 +98,6 @@
 
     	window.toDoList = toDoList;
 	});
-
     </script>
 </head>
 <body>
