--- a/bloque-2/knockout/hello-world.html
+++ b/bloque-2/knockout/hello-world.html
@@ -21,13 +21,23 @@
     function Contact() {
         this.buyer = { 
             name: ko.observable('Bob'), 
-            credits: ko.observable(250)
+            credits: ko.observable(2500)
         };
         this.seller = {
             name: ko.observable('Mario'), 
             credits: ko.observable(5800)
         };
     }
+
+    Contact.prototype.sell = function(credits) {
+        var sellerCredits = contact.seller.credits();
+        var buyerCredits = contact.buyer.credits();
+
+        console.log(sellerCredits, buyerCredits);
+
+        this.seller.credits(sellerCredits - credits);
+        this.buyer.credits(buyerCredits + credits);
+    };
 
     var contact = new Contact()
     ko.applyBindings(contact, $('#contact').get(0) );
